<resources>
    <string name="app_name">NewsDesk</string>
    <string name="SplashScreenContentDescription">Man on Sofa with Laptop in Hand</string>
    <string name="SubTextSplashScreen">Explore Trending News</string>
    <string name="Home">News</string>
    <string name="topHeadlines">Top Headlines</string>
    <string name="Name">Name</string>
    <string name="AddArticle">Add Article</string>
    <string name="Profile">Profile</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="ViewArticles">View Your Articles</string>
    <string name="Logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="DevName">Abdul Hanan Nawaz</string>
    <string name="DevWebsite">hanannawaz.com</string>
    <string name="DevRole">Software Developer @ITCON, APP Vizta</string>
    <string name="Email">Email</string>
    <string name="Email_dev">hanannawaz0@gmail.com</string>
    <string name="Password">Password</string>
    <string name="Password_dev">DevHananNawaz</string>
    <string name="Mobile">Mobile Number</string>
    <string name="Mobile_dev">03447818962</string>
    <string name="Address">Address</string>
    <string name="Save">Save</string>
    <string name="Update">Update</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Address_dev">House 1, Street 3, Canal View Town Daska 51010</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="notHaveAccount">Dont have an Account?</string>
    <string name="HaveAccount">Already have an Account?</string>
    <string name="Title">Title</string>
    <string name="ArticleBody">Article body</string>
    <string name="Image">Upload Image</string>
    <string name="Category">Category</string>
    <string name="Exit">Exit</string>
    <string name="babar">Babar Azam sets century record as Pakistan win opening ODI against West Indies</string>
    <string name="babrdesc">Babar Azam became the first batter to twice score three consecutive centuries in one-day internationals after his 103 helped Pakistan beat West Indies by five wickets in sweltering heat in Multan.

Captain Babar shared a 103-run partnership with Imam-ul-Haq (65) and a 108-run stand with Mohammad Rizwan (59) as Pakistan chased down a target of 306 - their highest-ever chase in an ODI - to go 1-0 up in the three-match series.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>