<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="7"
    android:padding="20dp"
    tools:context=".Fragments.Login_Fragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="center"
        android:layout_weight="5.5"
        android:src="@drawable/newsdesk"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Email"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:hint="@string/Password"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/ForgotPassword"
        android:gravity="end"
        />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/Login"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/roundcorner"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginLeft="10dp"
            android:text="@string/notHaveAccount"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            tools:ignore="NestedWeights,RtlCompat" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textAlignment="textStart"
            android:text="@string/Register"
            android:textColor="@color/blue"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            tools:ignore="RtlCompat" />

    </LinearLayout>



</LinearLayout>