<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="4"
    tools:context=".Fragments.AddArticle">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="60dp"
        android:text="@string/AddArticle"
        android:background="@drawable/background"
        android:textSize="35sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/josefin_sans_bold" />



    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Title"
        />

    <EditText
        android:id="@+id/etArticleBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:textAlignment="textStart"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/ArticleBody"
        android:minLines="5"
        android:maxLines="50"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:inputType="textMultiLine"
        />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Category"
        />

    <Button
        android:id="@+id/btnImageUpload"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Image"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/Save"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:background="@drawable/roundcorner"
        android:layout_gravity="center"
        />



</LinearLayout>