<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="4"
    tools:context=".Fragments.Register_Fragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="60dp"
        android:text="@string/Register"
        android:background="@drawable/background"
        android:textSize="35sp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/josefin_sans_bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Email"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Password"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:inputType="textPassword"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Address"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:inputType="textMultiLine"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/Register"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="@drawable/roundcorner"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginLeft="10dp"
            android:text="@string/HaveAccount"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            tools:ignore="NestedWeights,RtlCompat" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:textAlignment="textStart"
            android:text="@string/Login"
            android:textColor="@color/blue"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</LinearLayout>