<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    tools:context=".Fragments.ForgotPassword_Fragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="60dp"
        android:text="@string/ForgotPassword"
        android:background="@drawable/background"
        android:textSize="35sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:fontFamily="@font/josefin_sans_bold" />





    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Email"
        />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:background="@drawable/borderbottom"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/Address"
        />

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/ForgotPassword"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/roundcorner"
        android:layout_gravity="center"
        />


</LinearLayout>