<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".Fragments.Profile_Fragment">

    <LinearLayout
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:weightSum="2"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:text="@string/Profile"
            android:fontFamily="@font/josefin_sans_bold"
            android:textSize="35sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:id="@+id/btnEdit"
            android:contentDescription="@string/Email"
            android:background="@color/blue"
            android:src="@drawable/edit_icon"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/borderbottom"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="1dp"
            android:id="@+id/ivProfile"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circleimage"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DevName"
            android:fontFamily="@font/josefin_sans_bold"
            android:layout_marginTop="72dp"
            android:textFontWeight="900"
            android:textSize="25sp"
            android:id="@+id/tvName"
            android:textColor="@color/blue"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DevWebsite"
            android:fontFamily="@font/josefin_sans_bold"
            android:layout_marginTop="98dp"
            android:id="@+id/tvEmail"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:text="@string/DevRole"
            android:fontFamily="@font/josefin_sans_semi_bold"
            android:layout_marginTop="118dp"
            android:textSize="15sp"
            android:textColor="@color/grey"
            android:textAlignment="center"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="509dp"
        android:background="@drawable/profilebg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="70dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:background="@drawable/borderbottom"
            android:layout_height="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/Email"
                android:layout_margin="20dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/etEmail"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:textSize="10sp"
                android:gravity="center_vertical"
                android:hint="@string/Email"
                android:background="@drawable/roundcorner"
                android:textColor="@color/black"
                android:enabled="false"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderbottom"
            android:layout_height="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/Password"
                android:layout_margin="20dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/josefin_sans_bold"
                android:textSize="10sp"
                android:hint="@string/Password"
                android:id="@+id/etPassword"
                android:background="@drawable/roundcorner"
                android:textColor="@color/black"
                android:enabled="false"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/borderbottom"
            android:layout_height="150dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/Address"
                android:layout_margin="20dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:id="@+id/etAddress"
                android:hint="@string/Address"
                android:fontFamily="@font/josefin_sans_bold"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:inputType="textMultiLine"
                android:background="@drawable/roundcorner"
                android:textColor="@color/black"
                android:enabled="false"
                />
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/Update"
            android:id="@+id/btnUpdate"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundcorner"
            android:layout_gravity="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>